Fix #117 14-2 IMPLEMENTACIÓN PLUGIN ROLSAC2 PARA SISTRA2